force-app/main/default/objects/tgn__Test_Gen__c/tgn__Test_Gen__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Test Gen</label>
</CustomObject>