force-app/main/default/objects/tgn__Test_Gen__c/fields/tgn__Exception_Level__c.field-meta.xml
<CustomField>
    <fullName>tgn__Exception_Level__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Exception Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>