force-app/main/default/objects/tgn__Test_Gen__c/fields/tgn__Is_Initialized__c.field-meta.xml
<CustomField>
    <fullName>tgn__Is_Initialized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Initialized</label>
    <type>Checkbox</type>
</CustomField>