force-app/main/default/objects/tgn__Test_Gen__c/fields/tgn__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>tgn__Job_Id__c</fullName>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>