force-app/main/default/objects/tgn__Test_Gen__c/fields/tgn__Last_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>tgn__Last_Run_Time__c</fullName>
    <label>Last Run Time</label>
    <type>DateTime</type>
</CustomField>