force-app/main/default/objects/tgn__Test_Gen__c/fields/tgn__Scheduled_Jobs__c.field-meta.xml
<CustomField>
    <fullName>tgn__Scheduled_Jobs__c</fullName>
    <label>Scheduled Jobs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>