force-app/main/default/objects/tgn__Test_Gen__c/fields/tgn__Test_Class_Extension__c.field-meta.xml
<CustomField>
    <fullName>tgn__Test_Class_Extension__c</fullName>
    <label>Test Class Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>